--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # Pusher Credentials
 # IMPORTANT: For the client-side, environment variables must be prefixed with VITE_
-VITE_PUSHER_APP_KEY=your_pusher_app_key
-VITE_PUSHER_CLUSTER=your_pusher_cluster
+VITE_PUSHER_APP_KEY="dbadd46115526a98ea56"
+VITE_PUSHER_CLUSTER="ap2"
